# eframe_rebuilt

./: .gitignore  Cargo.toml  README.md  compare.sh  flake.nix
app/: Cargo.toml
app/src/: main.rs
eframe_rebuilt/: Cargo.toml
eframe_rebuilt/src/: epi_native.rs  fill.rs  lib.rs  types.rs  winit_app.rs  winit_integration.rs  winit_wrapper.rs
eframe_stripped/: Cargo.toml
eframe_stripped/src/: epi.rs  epi_native.rs  lib.rs  winit_app.rs  winit_wrapper.rs
src/: epi.rs  lib.rs  stuff.rs  winit_app.rs
threaded_app/: Cargo.toml
threaded_app/src/: main.rs
