[package]
name = "eframe_stripped"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
egui = "0.31.1"
egui-winit = "0.31.1"
egui_glow = "0.31.1"
glow = "0.16.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
image = { version = "0.25.6", features = ["png"] }
log = "0.4.27"
profiling = "1.0.16"
raw-window-handle = "0.6.2"
static_assertions = "1.1.0"
web-time = "1.1.0"
winit = "0.30.11"

[features]
default = []
glow = []
