[package]
name = "eframe_stripped"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui_glow = { workspace = true }
glow = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
image = { workspace = true, features = ["png"] }
log = { workspace = true }
profiling = { workspace = true }
raw-window-handle = { workspace = true }
static_assertions = { workspace = true }
web-time = { workspace = true }
winit = { workspace = true }

[features]
default = []
glow = []
